--- a/src/components/BaseHeader.astro
+++ b/src/components/BaseHeader.astro
@@ -16,7 +16,7 @@
     </div>
 
     <div class="logo">
-        <a href="/"><img src="/images/logo-combo.png" alt="Logotipo de JustSetGo" width="250" height="auto"></a>
+        <a href="/"><img src="/images/logos/logo-combo.png" alt="Logotipo de JustSetGo" width="250" height="auto"></a>
     </div>
 
     <div class="icons-support">
