Experimento con carrusel

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import BaseHeader from "@/components/BaseHeader.astro";
 import BaseHero from "@/components/BaseHero.astro"
+import DestinosCarrusel from "@/components/DestinosCarrusel.astro";
 ---
 
 <BaseLayout>
 	<BaseHeader/>
 	<BaseHero/>
+	<DestinosCarrusel/>
 </BaseLayout>
