Experimento corrusel, prediseñado y comentado

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,5 +8,5 @@ import DestinosCarrusel from "@/components/DestinosCarrusel.astro";
 <BaseLayout>
 	<BaseHeader/>
 	<BaseHero/>
-	<DestinosCarrusel/>
+	<!-- <DestinosCarrusel/> -->
 </BaseLayout>
