--- a/src/components/DestinosCarrusel.astro
+++ b/src/components/DestinosCarrusel.astro
@@ -1,4 +1,7 @@
 ---
+// hay que instalar la libreria de splidejs
+// npm install @splidejs/splide
+// o pnpm add @splidejs/splide
 import '@splidejs/splide/css'; // Estilos base de Splide
 ---
 
@@ -6,17 +9,24 @@ import '@splidejs/splide/css'; // Estilos base de Splide
   .splide {
     margin: 0 auto;
     padding: 2rem;
-    width: 300px;
-    height: 400px;
+    width: auto;
+    height: auto;
     font-family: 'Quicksand', sans-serif;
+    background-color: blue;
   }
 
   .splide__slide {
     text-align: center;
-    background: #ffffff;
+    background: #d41919;
     border-radius: 12px;
     padding: 1rem;
-    
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .splide__slide img {
@@ -63,7 +73,7 @@ import '@splidejs/splide/css'; // Estilos base de Splide
       type: 'loop',
       perPage: 1,
       autoplay: true,
-      interval: 4000,
+      interval: 2000,
       arrows: true,
       pagination: true,
     }).mount();
