--- a/src/components/BaseHero.astro
+++ b/src/components/BaseHero.astro
@@ -3,29 +3,73 @@
 ---
 
 <style>
-    .block {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+  .block {
+    /* background-color: brown; */
+    width: 100%;
+    height: 80vh;
+    position: relative;
 
-        & p {
+    background-image: linear-gradient(
+        to bottom,
+        #fff 0%,
+        transparent 20% 85%,
+        #fff 98%
+      ),
+      url(/images/BG2.jpg);
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* background-position: 0 -100px; */
+
+    /*  & p {
+            background-color: yellow; 
             font-family: quicksand;
-            font-weight: 500;
-            font-size: 1.5rem;
+            
             text-align: center;
             margin: 8px 0;
             line-height: 1.3;
             max-width: 40%;
-        }
+        } */
+
+    & h2 {
+      position: absolute;
+      left: 18%;
+      top: 10%;
+      font-family: quicksand;
+      font-weight: bolder;
+      text-align: right;
+      line-height: 2rem;
+        color: #4592bb;
+      & strong {
+        --border-color: #000;
+
+        background: linear-gradient(15deg, #0063ab 1%, #5bb7e7 30%, #60c3f8 67%, #fffb 75%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+        color: transparent;
+        font-size: 6rem;
+
+        filter: 
+          drop-shadow(2px -2px 3px #0003) drop-shadow(0 0 1px #fff2);
+      }
     }
-    .hero {
-        width: 100%;
+  }
+  /* .hero {
+        padding-top: 90px;
+        width: 60%;
         border-radius: 5px;
-    }
+       background-color: blue; 
+    } */
 </style>
 
 <div class="block">
-    <img class="hero" src="/images/landscape.jpg" alt="Imagen de un paisaje">
-    <p><strong>JustSetGo</strong> es una plataforma dedicada a ayudarte a planificar y organizar tus viajes de manera eficiente.</p>
+  <!-- <img class="hero" 
+    src="/images/BG2.jpg" 
+    alt="Imagen de un paisaje"> -->
+
+  <h2>
+    <strong>Historias</strong><br />
+    QUE SI SE CUENTAN
+  </h2>
 </div>
