--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,20 +1,20 @@
 ---
 import "@/css/globals.css"
 ---
-
+<!DOCTYPE html>
 <html lang="en">
 
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/Dark-theme-icon.ico" />
+		<link rel="icon" type="image/svg+xml" href="/icons/Dark-theme-icon.ico" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
     	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+		<script type="module" src="/scripts/theme.js"></script>
 	</head>
-
 	<body>
 		<slot/>
 	</body>
