Avanze en el tema claro/oscuro

--- a/src/components/BaseHeader.astro
+++ b/src/components/BaseHeader.astro
@@ -11,7 +11,9 @@ import SwitchTheme from "@/components/SwitchTheme.astro";
         display: flex;
         justify-content: space-between;
         height: auto;
-
+    }
+    .theme-switcher {
+        background-color: rgb(248, 0, 103);
     }
 
 </style>
@@ -30,7 +32,7 @@ import SwitchTheme from "@/components/SwitchTheme.astro";
     <div class="icons-support">
     </div>
 
-     <div class="theme">
+     <div class="theme-switcher">
         <SwitchTheme/>
     </div>
 </header>
