--- a/src/components/SwitchTheme.astro
+++ b/src/components/SwitchTheme.astro
@@ -1,8 +1,6 @@
 ---
 
 ---
-
-
 <style>
 .plane-switch {
   --dot: #fff;
@@ -178,7 +176,7 @@
 </style>
 
 <label class="plane-switch">
-    <input type="checkbox" id="theme-toggle" checked>
+    <input type="checkbox" id="theme-toggle">
     <div>
         <div>
             <svg viewBox="0 0 13 13">
