Creación de elemento bento.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import BaseHeader from "@/components/BaseHeader.astro";
 import BaseHero from "@/components/BaseHero.astro"
+import BaseBento from "@/components/BaseBento.astro";
 // import DestinosCarrusel from "@/components/DestinosCarrusel.astro";
 const title = "JustSetGo";
 ---
@@ -12,4 +13,5 @@ const title = "JustSetGo";
 	<BaseHeader/>
 	<BaseHero/>
 	<!-- <DestinosCarrusel/> -->
+	<BaseBento/>
 </BaseLayout>
